Fixed spacing issue on homepage

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -170,7 +170,7 @@ button:hover {
     position: absolute;
     z-index: 99;
     width: 100%;
-    height: 100%;
+    height: 90%;
 
     h2 {
       color: white;
